network-policies-and-ingress/assets/storefront-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-app
  namespace: storefront-ops
  labels:
    app: storefront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
        - name: storefront
          image: nginx:1.25
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: storefront-svc
  namespace: storefront-ops
spec:
  selector:
    app: storefront
  ports:
    - port: 80
      targetPort: 80
