network-policies-and-ingress/assets/storefront-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront-ingress
  namespace: storefront-ops
spec:
  rules:
    - host: storefront.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront-service
                port:
                  number: 80
